nwcom-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwcom
  labels:
    app: nwcom
spec:
  selector:
    matchLabels:
      app: nwcom
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0      
  template:
    metadata:
      labels:
        app: nwcom
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: nwcom
            topologyKey: kubernetes.io/hostname      
      containers:
      - image: jkozik/nw.com:v1.14
        name: nwcom
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            ephemeral-storage: 250M
            memory: 100M
          limits:
            ephemeral-storage: 500M
            memory: 200M
        ports:
        - containerPort: 80
          name: nwcom
        volumeMounts:
        - name: nwcom-persistent-storage
          mountPath: "/var/www/html/mount" 
        readinessProbe:
          httpGet:
            path: /wxstatus.php
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 30
      volumes:
      - name: nwcom-persistent-storage
        persistentVolumeClaim:
          claimName: nwcom-persistent-storage
