nwcom-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nwcom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - napervilleweather.com
    secretName: napervilleweather-com-tls
  rules:
  - host: napervilleweather.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nwcom
            port:
              number: 80
