nwcom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nwcom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: napervilleweather.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nwcom
            port:
              number: 80
